<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vega.mycashbook.CashFlow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        >
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/txtincome"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="20dp"
                android:fontFamily="@font/leter"
                android:gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtexp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txtincome"
                android:text="@string/expenses"
                android:textSize="20dp"
                android:fontFamily="@font/leter"
                android:gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtbl"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txtexp"
                android:text="@string/balance"
                android:textSize="20dp"

                android:fontFamily="@font/leter"
                android:gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/income"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_below="@id/txtincome"
                android:text="17000"
                android:textColor="@color/hitam"
                android:gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/leter"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/expenses"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_below="@id/txtincome"
                android:layout_toRightOf="@id/income"
                android:text="17000"
                android:textColor="@color/hitam"
                android:fontFamily="@font/leter"
                android:textSize="26dp"
                android:gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/balance"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_below="@id/txtincome"
                android:layout_toRightOf="@id/expenses"
                android:text="17000"
                android:textColor="@color/hitam"
                android:gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/leter"
                android:textSize="26dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>