<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/putih">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">
        <Button

            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back"
            android:background="@drawable/bek">

        </Button>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="340dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@color/colorPrimaryDark"
                android:text="Pengaturan Ganti Password"
                android:textColor="@color/putih"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp">

        <EditText
            android:id="@+id/oldEdt"
            android:layout_width="230dp"
            android:layout_gravity="center"

            android:hint="@string/password_now"
            android:inputType="textPassword"
            android:textColor="@color/hitam"
            android:textSize="15sp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"

            />

        <EditText
            android:id="@+id/newEdt"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:hint="@string/password_new"
            android:inputType="textPassword"
            android:textColor="@color/hitam"
            android:textSize="15sp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"

            />

        <Button
            android:id="@+id/cnfrmPwdBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:background="@drawable/barunih"
            android:textStyle="bold"
            android:fontFamily="@font/leter"
            android:textColor="@color/putih"
            android:text="@string/submit"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardLogo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:src="@drawable/fotoku" />

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/cardLogo"
            android:layout_toRightOf="@id/cardLogo"
            android:orientation="vertical"
            android:paddingLeft="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Aplikasi My Cash Book"
                android:textColor="@color/hitam"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="Aplikasi ini dibuat oleh:"
                android:textColor="@color/hitam" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="Nama: Vega Anggaresta"
                android:textColor="@color/hitam" />

            <TextView
                android:id="@+id/ItemLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="NIM: 2041723013"
                android:textColor="@color/hitam" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="Tanggal: 29 September 2023"
                android:textColor="@color/hitam" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>